--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     }
 </style>
 <body>
-    <h1>Hello Mikhail</h1>
+    <h1>Hello {{ name }}</h1>
+    <p>It's project: {{ project }}</p>
 </body>
 </html>
