--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
     }
 </style>
 <body>
+
+{% if object_list %}
 <table>
     <tr>
         <th>Id</th>
@@ -31,8 +33,8 @@
         </tr>
 {% endfor %}
 </table>
-
-
-
+{% else %}
+<p>Данных нет</p>
+{% endif %}
 </body>
 </html>
