--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,34 @@
         <div class="wrap_img">
             <img src="images/section_back_1.jpg" alt="">
         </div>
+        <h2>Тематика</h2>
+        <p>Python является одним из самых популярных языков программирования в мире. Подходит как для начинающих, так и для профессионалов. В этом блоге вы найдете подробную информацию о программировании на Python в разных направлениях.
+        </p>
+        <hr>
+        <p>Тут вы найдете не только статьи и материалы по программированию на Python, но и обучающие курсы и видео, которые позволят вам научиться создавать сложные программы и решать реальные задачи. Стараюсь объяснить лучшие тренды и знания в области программирования, чтобы помочь вам стать профессиональным разработчиком.
+        </p>
     </section>
     
-    <section class="topics_articles_section"></section>
+    <section class="topics_articles_section">
+        <h2>Статьи</h2>
+        <div class="topics_block info">
+            <div class="base_info">
+                <img src="images/base_topic.jpg" alt="base info for python">
+                <p>Основы Python</p>
+                <p>Короткие статьи по основам программирования на python, для любого уровня</p>
+            </div>
+            <div class="trends">
+                <img src="images/trends_topic.jpg" alt="trends in python world">
+                <p>Современные тренды</p>
+                <p>Какие изменения нас ожидают, обновления фреймворков и многое другое</p>
+            </div>
+            <div class="forum">
+                <img src="images/forum.jpg" alt="python forum">
+                <p>Форум сообщества</p>
+                <p>Найти собеседника и решить свои и чужие вопросы, поделиться кодом</p>
+            </div>
+        </div>
+    </section>
     <section class="why_section"></section>
     <section class="motivation_section"></section>
     <section class="contacts"></section>
