--- a/templates/index.html
+++ b/templates/index.html
@@ -34,27 +34,50 @@
     
     <section class="topics_articles_section">
         <h2>Статьи</h2>
-        <div class="topics_block info">
-            <div class="base_info">
+        <div class="topics_block">
+            <div class="base_info info">
                 <img src="images/base_topic.jpg" alt="base info for python">
-                <p>Основы Python</p>
+                <p class="header">Основы Python</p>
                 <p>Короткие статьи по основам программирования на python, для любого уровня</p>
             </div>
-            <div class="trends">
+            <div class="trends info">
                 <img src="images/trends_topic.jpg" alt="trends in python world">
-                <p>Современные тренды</p>
+                <p class="header">Современные тренды</p>
                 <p>Какие изменения нас ожидают, обновления фреймворков и многое другое</p>
             </div>
-            <div class="forum">
+            <div class="forum info">
                 <img src="images/forum.jpg" alt="python forum">
-                <p>Форум сообщества</p>
+                <p class="header">Форум сообщества</p>
                 <p>Найти собеседника и решить свои и чужие вопросы, поделиться кодом</p>
             </div>
         </div>
     </section>
-    <section class="why_section"></section>
-    <section class="motivation_section"></section>
-    <section class="contacts"></section>
-    <footer></footer>
+    
+    <section class="motivation_section">
+        <img src="images/motivation.jpg" alt="author motivation">
+        <div class="motivation_text">
+            <h2>Просто попробуй и все получится!</h2>
+            <p>Не важно где и кем ты работаешь, Python настолько прост, что ты сможешь реализовать всё, что пожелаешь....</p>
+            <a href="#">Резюме автора</a>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="contact_info">
+            <h2>Контакты</h2>
+            <p>Можешь предложить любую идею<br> и рассмотрю каждое письмо</p>
+            <a href="#">Написать</a>
+            <table>
+                <tr>
+                    <td>E-MAIL</td>
+                    <td>celestial-neuron@list.ru</td>
+                </tr>
+                <tr>
+                    <td>TELEGRAM</td>
+                    <td>@Giocatory</td>
+                </tr>
+            </table>
+        </div>
+        <img src="images/contacts.jpg" alt="contacts image Dicaprio">
+    </section>
 </body>
 </html>
