--- a/templates/style/main.css
+++ b/templates/style/main.css
@@ -6,6 +6,7 @@
 }
 * a, html a {
   text-decoration: none;
+  cursor: pointer;
 }
 * body, html body {
   position: relative;
@@ -191,6 +192,7 @@
 }
 
 .contacts {
+  position: relative;
   display: flex;
   justify-content: space-around;
   padding: 2rem;
@@ -203,7 +205,7 @@
   font-size: 3em;
   margin: 2rem;
 }
-.contacts .contact_info a {
+.contacts .contact_info button {
   display: block;
   margin: 2rem;
   width: 15rem;
@@ -218,7 +220,7 @@
   -ms-border-radius: 50rem;
   -o-border-radius: 50rem;
 }
-.contacts .contact_info a:hover {
+.contacts .contact_info button:hover {
   color: #e6dcc6;
   background-color: #2a292b;
   box-shadow: 0px 0px 1px 1px rgb(230, 220, 198);
@@ -234,4 +236,44 @@
 }
 .contacts .contact_info table td:first-child {
   font-weight: bold;
+}
+.contacts .dialog_for_user {
+  visibility: hidden;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 40%;
+  top: 20%;
+  background-color: #e6dcc6;
+}
+.contacts .dialog_for_user button {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  color: #2a292b;
+  border: 0.1rem solid #2a292b;
+  padding: 0.1rem;
+}
+.contacts .dialog_for_user button:hover {
+  background-color: red;
+  color: yellow;
+  cursor: pointer;
+}
+.contacts .dialog_for_user label, .contacts .dialog_for_user input, .contacts .dialog_for_user textarea {
+  display: block;
+  color: #2a292b;
+  margin: 0.2rem;
+}
+.contacts .dialog_for_user .get_text {
+  margin: 0 auto;
+  border-radius: 50rem;
+  -webkit-border-radius: 50rem;
+  -moz-border-radius: 50rem;
+  -ms-border-radius: 50rem;
+  -o-border-radius: 50rem;
+}
+.contacts .dialog_for_user .get_text:hover {
+  color: #e6dcc6;
+  background-color: #2a292b;
+  box-shadow: 0px 0px 1px 1px rgb(230, 220, 198);
 }/*# sourceMappingURL=main.css.map */
